--- a/admin/adminCustomer.html
+++ b/admin/adminCustomer.html
@@ -6,20 +6,14 @@
   	<title>KOKOA BANK ADMIN</title>
 	<!-- 부트스트랩 -->
 	<link href="../html/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<!-- JqueryUi -->
-	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 	<!-- Fontawesome -->
 	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
 	<!-- Style CSS -->
 	<link href="../html/assets/css/style.css" rel="stylesheet">
 	<!-- Datatables -->
-	<script src="../html/assets/vendor/simple-datatables/simple-datatables.js"></script>
 	<link href="../html/assets/vendor/simple-datatables/style.css" rel="stylesheet">
-	<!-- Script JS -->
-	<script src="../html/assets/js/main.js"></script>
 	<!-- Google Fonts -->
 	<link href="https://fonts.gstatic.com" rel="preconnect">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -43,7 +37,7 @@
       		</div>
     	</div>
 	</header>
-  	<main id="main" class="main" style="width: 1230px; margin: auto; padding-top: 80px;">
+	<main id="main" class="main">
 	    <div class="pagetitle">
       		<h1>고객관리</h1>
       		<nav>
@@ -416,5 +410,10 @@
      		 &copy; Copyright <strong><span>KOKOA BANK</span></strong> Corp. All Rights Reserved
     	</div>
   	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+	<script src="../html/assets/vendor/simple-datatables/simple-datatables.js"></script>
+	<script src="../html/assets/js/main.js"></script>	
 </body>
 </html>
