--- a/html/login.html
+++ b/html/login.html
@@ -7,29 +7,17 @@
 	<title>KOKOA BANK LOGIN</title>
     <!-- 부트스트랩 -->
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-	<!-- JqueryUi -->
-	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-	<!-- Fontawesome -->
-	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
 	<!-- Template Main CSS File -->
 	<link href="assets/css/style.css" rel="stylesheet">
-	<script src="assets/js/main.js"></script>
   	<!-- Google Fonts -->
   	<link href="https://fonts.gstatic.com" rel="preconnect">
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-	<!-- font-family: 'Dongle', sans-serif; -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   	<main>
 		<div class="container">
       		<section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-        		<div class="container">
+        		<div class="container" style="margin-top: -500px;">
           			<div class="row justify-content-center">
             			<div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
               				<div class="d-flex justify-content-center py-4">
@@ -76,6 +64,7 @@
    			</section>
    		</div>
 	</main>
-  	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
